--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,21 @@ artifacts/
 *.log
 .DS_Store
 package-lock.json
+
+node_modules
+.env
+
+# Hardhat files
+/cache
+/artifacts
+
+# TypeChain files
+/typechain
+/typechain-types
+
+# solidity-coverage files
+/coverage
+/coverage.json
+
+# Hardhat Ignition default folder for deployments against a local node
+ignition/deployments/chain-31337
